<resources>
    <string name="app_name" translatable="false">CustoMIUIzer14</string>
    <string name="app_slogan" translatable="false">Customize MIUI to your liking</string>
    <string name="app_about">About</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_dev">by Mikanoshi &amp; MonwF</string>
    <string name="about_dynamic">Generally, mods require soft reboot to be activated or deactivated, but those marked with ⟲ only require one soft reboot after their value was changed from default to custom one, subsequent changes are applied immediately.</string>
    <string name="about_unsupported">Mods marked with ⨯ are not supported on this device.</string>
    <string name="title_activity_main" translatable="false">@string/app_name</string>
    <string name="menu_update">Update</string>
    <string name="mods">Mods</string>
    <string name="mods_actions">Actions</string>
    <string name="value_is_empty">Value unconfigured</string>
    <string name="value_is_set">Value configured</string>
    <string name="clear_value">Clear</string>
    <string name="enable_mod">Enable mod</string>
    <string name="white_lists">Turn on whitelisting</string>
    <string name="system_mods">System</string>
    <string name="system_mods_screen">Screen</string>
    <string name="system_mods_screen_rotation">Rotation</string>
    <string name="system_mods_screen_backlight">Backlight</string>
    <string name="system_mods_audio">Audio</string>
    <string name="system_mods_vibration">Vibration</string>
    <string name="system_mods_toasts">Toasts</string>
    <string name="system_statusbaricons_title">Hide icons</string>
    <string name="system_statusbaricons_summ">Manage status bar icons visibility</string>
    <string name="system_statusbaricons_wifistandard_title">Show Wi-Fi standard</string>
    <string name="system_statusbaricons_battery1_title">Battery image</string>
    <string name="system_statusbaricons_battery4_title">Battery percentage mark</string>
    <string name="system_statusbaricons_hotspot_title">Hotspot</string>
    <string name="system_statusbar_clock_align_title">Horizontal alignment</string>
    <string name="system_netspeedinterval_title">Network speed update interval</string>
    <string name="system_detailednetspeed_title">Upload and download speed are displayed in dual rows</string>
    <string name="system_detailednetspeed_summ">Show incoming and outgoing network speeds separately</string>
    <string name="system_detailednetspeed_icon_title">Indicator icons</string>
    <string name="system_detailednetspeed_icon_summ">Incoming/outgoing traffic icons displayed next to speed value (not all custom fonts have every icon)</string>
    <string name="system_detailednetspeed_low_title">Hide low speed</string>
    <string name="system_detailednetspeed_low_summ">Do not show indicator if speed is low</string>
    <string name="system_detailednetspeed_lowlevel_title">Low speed level</string>
    <string name="system_detailednetspeed_lowlevel_summ">Speed values below this level will be considered low and will have a different indication icon</string>
    <string name="system_detailednetspeed_secunit_title">Hide Byte per second suffix(B/s)</string>
    <string name="system_netspeed_fontsize_title">Network speed\'s font size</string>
    <string name="system_visualizer_lockscreen_summ">Visualizer is drawn on top of lock screen wallpaper</string>
    <string name="system_visualizer_custom_title">Show on custom lock screen</string>
    <string name="system_visualizer_custom_summ">Draw visualizer on top of custom lock screen</string>
    <string name="system_visualizer_drawer_title">Show in notification drawer</string>
    <string name="system_visualizer_drawer_summ">Additionally draw visualizer in an expanded notification drawer</string>
    <string name="system_visualizer_animdur_title">Animation duration</string>
    <string name="system_visualizer_transp_title">Transparency</string>
    <string name="system_visualizer_style_title">Style</string>
    <string name="system_visualizer_glowlevel_title">Glow</string>
    <string name="system_visualizer_color_title">Color</string>
    <string name="system_visualizer_colorval_title">Select custom color</string>
    <string name="system_visualizer_dyntime_title">Dynamic color change interval</string>
    <string name="system_secureqs_custom_title">All 3rd party tiles</string>
    <string name="system_secureqs_edit_title">Tiles editing</string>
    <string name="system_secureqs_edit_summ">Does not apply to Control center</string>
    <string name="system_secureqs_keepopened_title">Keep opened</string>
    <string name="system_secureqs_keepopened_summ">Do not collapse panel after unlocking</string>
    <string name="secure_tiles">Secure tiles</string>
    <string name="system_secureqs_airplane_title">Airplane mode</string>
    <string name="system_secureqs_location_title">Location</string>
    <string name="system_secureqs_sync_title">Synchronization</string>
    <string name="system_noscreenlock_title">Disable screen lock</string>
    <string name="system_noscreenlock_req_summ">Some devices might not work without unlocking once after boot</string>
    <string name="system_noscreenlock_summ">Selectively disable screen lock (does not change security for any apps and does not remove fingerprint data)</string>
    <string name="system_noscreenlock_scr_title">Skip lock screen</string>
    <string name="system_noscreenlock_scr_summ">Do not show lock screen at all when screen lock is disabled</string>
    <string name="system_noscreenlock_nofaceunlock_title">Skip face unlock</string>
    <string name="system_noscreenlock_nofaceunlock_summ">Do not start face unlock when screen lock is disabled</string>
    <string name="system_noscreenlock_wifi_title">Trusted Wi-Fi networks</string>
    <string name="system_noscreenlock_wifi_summ">Temporarily disable screen lock while connected to these networks</string>
    <string name="system_noscreenlock_bt_title">Trusted Bluetooth devices</string>
    <string name="system_noscreenlock_bt_summ">Temporarily disable screen lock while these devices are connected</string>
    <string name="system_mods_lockscreen">Lock screen</string>
    <string name="system_mods_statusbar_statusbar">Status bar</string>
    <string name="system_mods_statusbar_drawer">Notification drawer</string>
    <string name="system_mods_notifications">Notifications</string>
    <string name="system_mods_recents">Recent apps list</string>
    <string name="system_mods_betterpopups">Popup notifications</string>
    <string name="system_mods_floatingwindows">Floating windows and Splitscreen</string>
    <string name="system_mods_applock">App lock</string>
    <string name="system_mods_cc">Control Center</string>
    <string name="system_mods_other">Other</string>
    <string name="launcher_mods">MIUI Launcher</string>
    <string name="launcher_gestures">Gestures</string>
    <string name="launcher_folders">Folders</string>
    <string name="launcher_titles">App titles</string>
    <string name="launcher_privacyapps">Hidden apps</string>
    <string name="launcher_swipedownaction_title">Swipe down action (1 finger)</string>
    <string name="launcher_swipedownaction_summ">Action for swipe down gesture with 1 finger on any home screen</string>
    <string name="launcher_swipedownaction2_title">Swipe down action (2 fingers)</string>
    <string name="launcher_swipedownaction2_summ">Action for swipe down gesture with 2 fingers on any home screen</string>
    <string name="launcher_swipeupaction_title">Swipe up action (1 finger)</string>
    <string name="launcher_swipeupaction_summ">Action for swipe up gesture with 1 finger on any home screen</string>
    <string name="launcher_swipeupaction2_title">Swipe up action (2 fingers)</string>
    <string name="launcher_swipeupaction2_summ">Action for swipe up gesture with 2 fingers on any home screen</string>
    <string name="launcher_swiperightaction_title">Swipe right action</string>
    <string name="launcher_swiperightaction_summ">Action for swipe right gesture on launcher dock</string>
    <string name="launcher_swipeleftaction_title">Swipe left action</string>
    <string name="launcher_swipeleftaction_summ">Action for swipe left gesture on launcher dock</string>
    <string name="launcher_shakeaction_title">Shake action</string>
    <string name="launcher_shakeaction_summ">Action for shaking the device on any home screen</string>
    <string name="launcher_bugfixes">Bug fixes</string>
    <string name="controls_mods">Controls</string>
    <string name="controls_powerflash_title">Quick flashlight</string>
    <string name="controls_powerflash_summ">Long press power button while screen is off to turn flashlight on</string>
    <string name="controls_powerflash_delay_title">Longer quick flashlight delay</string>
    <string name="controls_powerflash_delay_summ">Increase the power button long press delay</string>
    <string name="controls_mods_volume">Volume keys</string>
    <string name="controls_volumecursor_title">Control input cursor</string>
    <string name="controls_volumecursor_summ">Move text input cursor using volume keys</string>
    <string name="controls_volumemedia_up_title">Volume Up long press action</string>
    <string name="controls_volumemedia_up_summ">Action for Volume Up long press when screen is off</string>
    <string name="controls_volumemedia_down_title">Volume Down long press action</string>
    <string name="controls_volumemedia_down_summ">Action for Volume Down long press when screen is off</string>
    <string name="various_mods">Various</string>
    <string name="settings">Settings</string>
    <string name="array_default">Default</string>
    <string name="array_global_toggle_wifi" translatable="false">Wi-Fi</string>
    <string name="array_global_toggle_bt">Bluetooth</string>
    <string name="array_global_toggle_nfc" translatable="false">NFC</string>
    <string name="array_global_toggle_mobiledata">Mobile data</string>
    <string name="array_screenlock_bootonly">Require authentication after boot</string>
    <string name="miuizer">CustoMIUIzer settings</string>
    <string name="miuizer_locale_title">Interface language</string>
    <string name="miuizer_locale_summ">Always display module\'s interface in selected language</string>
    <string name="troubleshoot">Troubleshooting</string>
    <string name="miuizer_acrasend_title">Send detailed report</string>
    <string name="miuizer_acrasend_summ">Collect device and environment info, logcat and Xposed log, and send them to developer.\nInternet connection is required</string>
    <string name="miuizer_acramail_summ">Enter your contact information and it will be included in detailed and crash reports</string>
    <string name="miuizer_acramail_title">Contact information</string>
    <string name="support">Support</string>
    <string name="support_repo_title">Mikanoshi\'s CustoMIUIzer repo</string>
    <string name="support_repo_summ">Git repository with module sources and distributions</string>
    <string name="support_bug_title">Report a bug</string>
    <string name="support_bug_summ">Send us a bug report or a feature request via official issue tracker</string>
    <string name="support_donate_title">Donate Mikanoshi</string>
    <string name="support_donate_summ">Best way to express your gratitude for this awesome module :)</string>
    <string name="support_donate_other_summ" translatable="false">Paypal, Webmoney, QIWI</string>
    <string name="format_d_ms">%d ms</string>
    <string name="format_d_s">%d s</string>
    <string name="format_KBs">%d KB/s</string>
    <string name="oneKBs">1 KB/s</string>
    <string name="system_statusbar_mobiletype_single_verticaloffset">Vertical offset</string>
    <string name="system_statusbar_mobiletype_single_bold_title">Bold style</string>
</resources>