<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:miuizer="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<name.mikanoshi.customiuizer.prefs.CheckBoxPreferenceEx
		android:key="pref_key_system_fixmeter"
		android:summary="@string/system_fixmeter_summ"
		android:title="@string/system_fixmeter_title"
		android:defaultValue="false" />

	<name.mikanoshi.customiuizer.prefs.SeekBarPreference
		android:key="pref_key_system_netspeedinterval"
		android:title="@string/system_netspeedinterval_title"
		android:defaultValue="4"
		miuizer:minValue="1"
		miuizer:maxValue="10"
		miuizer:stepValue="1"
		miuizer:offtext="@string/array_default"
		miuizer:format="@string/format_d_s" />

	<name.mikanoshi.customiuizer.prefs.SeekBarPreference
		android:key="pref_key_system_netspeed_fontsize"
		android:title="@string/system_netspeed_fontsize_title"
		android:defaultValue="13"
		miuizer:minValue="13"
		miuizer:maxValue="30"
		miuizer:stepValue="1"
		miuizer:offtext="@string/array_default"
		miuizer:displayDividerValue="2"
		miuizer:format="%s dip" />

	<name.mikanoshi.customiuizer.prefs.CheckBoxPreferenceEx
		android:key="pref_key_system_netspeed_bold"
		android:title="@string/system_statusbar_mobiletype_single_bold_title"
		android:defaultValue="false" />

	<name.mikanoshi.customiuizer.prefs.SeekBarPreference
		android:key="pref_key_system_netspeed_verticaloffset"
		android:title="@string/system_statusbar_mobiletype_single_verticaloffset"
		android:defaultValue="8"
		miuizer:minValue="0"
		miuizer:maxValue="16"
		miuizer:stepValue="1"
		miuizer:negativeShift="8"
		miuizer:offtext="@string/array_default"
		miuizer:displayDividerValue="2"
		miuizer:format="%s dip" />

	<name.mikanoshi.customiuizer.prefs.CheckBoxPreferenceEx
		android:key="pref_key_system_detailednetspeed_secunit"
		android:title="@string/system_detailednetspeed_secunit_title"
		android:defaultValue="false" />

	<name.mikanoshi.customiuizer.prefs.SeekBarPreference
		android:key="pref_key_system_detailednetspeed_lowlevel"
		android:title="@string/system_detailednetspeed_lowlevel_title"
		android:summary="@string/system_detailednetspeed_lowlevel_summ"
		android:defaultValue="1"
		miuizer:minValue="1"
		miuizer:maxValue="1024"
		miuizer:stepValue="1"
		miuizer:format="@string/format_KBs"
		miuizer:offtext="@string/oneKBs" />

	<name.mikanoshi.customiuizer.prefs.CheckBoxPreferenceEx
		android:key="pref_key_system_detailednetspeed_low"
		android:summary="@string/system_detailednetspeed_low_summ"
		android:title="@string/system_detailednetspeed_low_title"
		android:defaultValue="false" />

	<name.mikanoshi.customiuizer.prefs.CheckBoxPreferenceEx
		android:key="pref_key_system_detailednetspeed"
		android:title="@string/system_detailednetspeed_title"
		android:summary="@string/system_detailednetspeed_summ"
		android:defaultValue="false" />

	<name.mikanoshi.customiuizer.prefs.ListPreferenceEx
		android:key="pref_key_system_detailednetspeed_icon"
		android:summary="@string/system_detailednetspeed_icon_summ"
		android:title="@string/system_detailednetspeed_icon_title"
		android:entries="@array/netspeedicons"
		android:entryValues="@array/netspeedicons_val"
		android:defaultValue="2"
		miuizer:indentLevel="1"
		android:dependency="pref_key_system_detailednetspeed" />

	<name.mikanoshi.customiuizer.prefs.ListPreferenceEx
		android:key="pref_key_system_detailednetspeed_align"
		android:title="@string/system_statusbar_clock_align_title"
		android:entries="@array/horizontalalign"
		android:entryValues="@array/horizontalalign_val"
		miuizer:valueAsSummary="true"
		miuizer:indentLevel="1"
		android:dependency="pref_key_system_detailednetspeed"
		android:defaultValue="1" />

</PreferenceScreen>