<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:miuizer="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:key="pref_key_cat">

	<tv.withaibuild.customiuizer.prefs.PreferenceEx
		android:title="@string/launcher_folders"
		android:key="pref_key_launcher_cat_folders" />
	<tv.withaibuild.customiuizer.prefs.PreferenceEx
		android:title="@string/launcher_titles"
		android:key="pref_key_launcher_cat_titles" />
	<tv.withaibuild.customiuizer.prefs.PreferenceEx
		android:title="@string/launcher_privacyapps"
		android:key="pref_key_launcher_cat_privacyapps" />
	<tv.withaibuild.customiuizer.prefs.PreferenceEx
		android:title="@string/launcher_gestures"
		android:key="pref_key_launcher_cat_gestures" />
	<tv.withaibuild.customiuizer.prefs.PreferenceEx
		android:title="@string/launcher_bugfixes"
		android:key="pref_key_launcher_cat_bugfixes" />
	<tv.withaibuild.customiuizer.prefs.PreferenceEx
		android:title="@string/system_mods_other"
		android:key="pref_key_launcher_cat_other" />

</PreferenceScreen>